-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 11, 12
-
Component/s: hotspot
-
b19
-
aarch64
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8256564 | 11.0.11-oracle | Dukebot | P3 | Resolved | Fixed | b01 |
| JDK-8221214 | 11.0.4 | Roland Westrelin | P3 | Resolved | Fixed | b01 |
| JDK-8220667 | 11.0.3 | Roland Westrelin | P3 | Resolved | Fixed | b04 |
Intrinsics for unsafe.compareAndSetByte() and unsafe.compareAndSetShort() don't properly deal with sign extension: load exclusive doesn't sign extend loaded value but comparison is done with sign extended value.
- backported by
-
JDK-8220667 AArch64: unsafe.compareAndSetByte() and unsafe.compareAndSetShort() c2 intrinsics broken with negative expected value
-
- Resolved
-
-
JDK-8221214 AArch64: unsafe.compareAndSetByte() and unsafe.compareAndSetShort() c2 intrinsics broken with negative expected value
-
- Resolved
-
-
JDK-8256564 AArch64: unsafe.compareAndSetByte() and unsafe.compareAndSetShort() c2 intrinsics broken with negative expected value
-
- Resolved
-